--- a/BirdSong/res/values/strings.xml
+++ b/BirdSong/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">Bird Song Identifier</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
