--- a/BirdSong/res/values/strings.xml
+++ b/BirdSong/res/values/strings.xml
@@ -2,11 +2,19 @@
 <resources>
 
     <string name="app_name">Bird Song Identifier</string>
+    
     <string name="action_settings">Settings</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
+    
+    <string name="button_listen">Listen</string>
+    <string name="button_stop_listening">Done listening</string>
+    
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_listen">Listen</string>
     <string name="title_activity_display_message">My Message</string>
-    <string name="hello_world">Hello world!</string>
+    
+    <string name="home_screen">Home Screen</string>
+    
+    <string name="listening">Listening...</string>
+    
 
 </resources>
