--- a/BirdSong/res/values/strings.xml
+++ b/BirdSong/res/values/strings.xml
@@ -2,17 +2,12 @@
 <resources>
 
     <string name="app_name">Bird Song Identifier</string>
-    
     <string name="action_settings">Settings</string>
-    
     <string name="button_listen">Listen</string>
-    <string name="button_stop_listening">Done listening</string>
-    
+    <string name="button_stop_listening">Stop and Analyze</string>
     <string name="title_activity_listen">Listen</string>
-    
     <string name="home_screen">Bird Song Indentifier</string>
-    
     <string name="listening">Listening…</string>
-    
-
+    <string name="title_activity_analysis">Analysis Result</string>
+	<string name="label_top_result">Best Match</string>
 </resources>
